--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "nanoid": "^3.1.20"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
